--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                             subjectDiv.appendChild(headerDiv);
                         });
 
-                        // Render checkboxes for each week
+                        // Render checkboxes under each day (columns)
                         for (let week = 0; week < subject.weeks; week++) {
                             const weekRow = document.createElement("div");
                             weekRow.classList.add("day");
